# silence-fixit-error

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  fix_silenced_fixit_error.py  setup.cfg  silence_fixit_error.py
.github/workflows/: tests.yaml
tests/: fix_silenced_fixit_error_test.py  silence_fixit_error_test.py
