[metadata]
name = silence_fixit_error
version = 0.1.0
description = add `lint-fixme` comments to every occurrence of a `fixit` error
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/samueljsb/silence-fixit-error
author = Samuel Searles-Bryant
author_email = sam@samueljsb.co.uk
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
py_modules = silence_fixit_error
install_requires =
    fixit>=2.0.0
python_requires = >=3.9

[options.entry_points]
console_scripts =
    silence-fixit-error = silence_fixit_error:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[flake8]
extend-select = B9
extend-ignore = B950

[mypy]
check_untyped_defs = true
enable_error_code =
    truthy-bool
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
pretty = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
